--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     .quiz-bg-rect {
       position: fixed;
       top: 0;
-  left: 9vw;
+  left: 8vw;
   width: 91vw;
       height: 100vh;
       background: #fff;
@@ -24,11 +24,14 @@
     }
     .quiz-container {
       background: #fff;
-      max-width: 600px;
-      margin: 2em auto;
+  max-width: 600px;
+  margin: 10em 0 2em 14vw;
       box-shadow: 0 2px 8px rgba(0,0,0,0.08);
       border-radius: 8px;
       padding: 2em 2em 1em 2em;
+      .quiz-bg-rect {
+        position: relative;
+      }
       border: 1px solid #e0e0e0;
       position: relative;
       z-index: 2;
@@ -40,8 +43,9 @@
       text-align: center;
     }
     .question {
-      margin-bottom: 2em;
-      padding: 1em;
+    <div class="quiz-bg-rect">
+      <img src="pics/x bb.png" alt="x triangle" class="x-triangle-img">
+    </div>
       border: 1px solid #e0e0e0;
       border-radius: 6px;
       background: #fafafa;
@@ -102,9 +106,9 @@
       font-weight: bold;
     }
     .x-triangle-img {
-      position: fixed;
-  left: 0px;
-  top: 20px;
+    position: fixed;
+  left: -177px;
+  top: -240px;
   z-index: 3;
   height: 600px;
   margin-left: 0;
@@ -115,7 +119,6 @@
   <div class="quiz-bg-rect"></div>
   <img src="pics/x bb.png" alt="x triangle" class="x-triangle-img">
   <div class="quiz-container">
-    <h1>Quiz</h1>
     <form id="quiz-form">
       <div class="question">
         <h3>1. What is the slope of the line shown in the graph below?</h3>
@@ -145,6 +148,87 @@
           <label for="q2d">Undefined</label>
         </div>
       </div>
+      <div class="question">
+        <h3>3. What is the slope of the line y = -2x + 4?</h3>
+        <canvas id="graph3" width="400" height="400"></canvas>
+        <div>
+          <input type="radio" id="q3a" name="q3" value="-2">
+          <label for="q3a">-2</label><br>
+          <input type="radio" id="q3b" name="q3" value="2">
+          <label for="q3b">2</label><br>
+          <input type="radio" id="q3c" name="q3" value="4">
+          <label for="q3c">4</label><br>
+          <input type="radio" id="q3d" name="q3" value="-4">
+          <label for="q3d">-4</label>
+        </div>
+      </div>
+      <div class="question">
+        <h3>4. Which point lies on the line y = x + 2?</h3>
+        <canvas id="graph4" width="400" height="400"></canvas>
+        <div>
+          <input type="radio" id="q4a" name="q4" value="(2, 4)">
+          <label for="q4a">(2, 4)</label><br>
+          <input type="radio" id="q4b" name="q4" value="(1, 1)">
+          <label for="q4b">(1, 1)</label><br>
+          <input type="radio" id="q4c" name="q4" value="(0, 2)">
+          <label for="q4c">(0, 2)</label><br>
+          <input type="radio" id="q4d" name="q4" value="(3, 5)">
+          <label for="q4d">(3, 5)</label>
+        </div>
+      </div>
+      <div class="question">
+        <h3>5. What is the slope of a vertical line?</h3>
+        <div>
+          <input type="radio" id="q5a" name="q5" value="undefined">
+          <label for="q5a">Undefined</label><br>
+          <input type="radio" id="q5b" name="q5" value="zero">
+          <label for="q5b">Zero</label><br>
+          <input type="radio" id="q5c" name="q5" value="positive">
+          <label for="q5c">Positive</label><br>
+          <input type="radio" id="q5d" name="q5" value="negative">
+          <label for="q5d">Negative</label>
+        </div>
+      </div>
+      <div class="question">
+        <h3>6. Which line passes through the point (3, 7)?</h3>
+        <div>
+          <input type="radio" id="q6a" name="q6" value="y = 2x + 1">
+          <label for="q6a">y = 2x + 1</label><br>
+          <input type="radio" id="q6b" name="q6" value="y = x + 4">
+          <label for="q6b">y = x + 4</label><br>
+          <input type="radio" id="q6c" name="q6" value="y = x + 2">
+          <label for="q6c">y = x + 2</label><br>
+          <input type="radio" id="q6d" name="q6" value="y = 2x + 3">
+          <label for="q6d">y = 2x + 3</label>
+        </div>
+      </div>
+      <div class="question">
+        <h3>7. What is the slope of the line passing through (0, 0) and (2, 6)?</h3>
+        <canvas id="graph7" width="400" height="400"></canvas>
+        <div>
+          <input type="radio" id="q7a" name="q7" value="3">
+          <label for="q7a">3</label><br>
+          <input type="radio" id="q7b" name="q7" value="2">
+          <label for="q7b">2</label><br>
+          <input type="radio" id="q7c" name="q7" value="6">
+          <label for="q7c">6</label><br>
+          <input type="radio" id="q7d" name="q7" value="0">
+          <label for="q7d">0</label>
+        </div>
+      </div>
+      <div class="question">
+        <h3>8. Which of the following lines has a slope of 0?</h3>
+        <div>
+          <input type="radio" id="q8a" name="q8" value="y = 5">
+          <label for="q8a">y = 5</label><br>
+          <input type="radio" id="q8b" name="q8" value="x = 5">
+          <label for="q8b">x = 5</label><br>
+          <input type="radio" id="q8c" name="q8" value="y = 2x + 1">
+          <label for="q8c">y = 2x + 1</label><br>
+          <input type="radio" id="q8d" name="q8" value="y = -2x + 4">
+          <label for="q8d">y = -2x + 4</label>
+        </div>
+      </div>
       <button type="submit">Submit Answers</button>
     </form>
     <div id="solution" class="solution" style="display:none;"></div>
@@ -152,6 +236,102 @@
   <!-- Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
+    // Q3: y = -2x + 4
+    const ctx3 = document.getElementById('graph3');
+    if (ctx3) {
+      const xVals = [];
+      const yVals = [];
+      for (let x = -10; x <= 10; x++) {
+        xVals.push(x);
+        yVals.push(-2 * x + 4);
+      }
+      new Chart(ctx3.getContext('2d'), {
+        type: 'line',
+        data: {
+          labels: xVals,
+          datasets: [{
+            label: '',
+            data: yVals,
+            borderColor: 'blue',
+            borderWidth: 2,
+            pointRadius: 0,
+            fill: false,
+          }]
+        },
+        options: {
+          responsive: false,
+          scales: {
+            x: { type: 'linear', min: -10, max: 10, title: { display: true, text: 'x' } },
+            y: { min: -20, max: 20, title: { display: true, text: 'y' } }
+          },
+          plugins: { legend: { display: false } }
+        }
+      });
+    }
+    // Q4: y = x + 2
+    const ctx4 = document.getElementById('graph4');
+    if (ctx4) {
+      const xVals = [];
+      const yVals = [];
+      for (let x = -10; x <= 10; x++) {
+        xVals.push(x);
+        yVals.push(x + 2);
+      }
+      new Chart(ctx4.getContext('2d'), {
+        type: 'line',
+        data: {
+          labels: xVals,
+          datasets: [{
+            label: '',
+            data: yVals,
+            borderColor: 'blue',
+            borderWidth: 2,
+            pointRadius: 0,
+            fill: false,
+          }]
+        },
+        options: {
+          responsive: false,
+          scales: {
+            x: { type: 'linear', min: -10, max: 10, title: { display: true, text: 'x' } },
+            y: { min: -10, max: 15, title: { display: true, text: 'y' } }
+          },
+          plugins: { legend: { display: false } }
+        }
+      });
+    }
+    // Q7: line through (0,0) and (2,6) => y = 3x
+    const ctx7 = document.getElementById('graph7');
+    if (ctx7) {
+      const xVals = [];
+      const yVals = [];
+      for (let x = -10; x <= 10; x++) {
+        xVals.push(x);
+        yVals.push(3 * x);
+      }
+      new Chart(ctx7.getContext('2d'), {
+        type: 'line',
+        data: {
+          labels: xVals,
+          datasets: [{
+            label: '',
+            data: yVals,
+            borderColor: 'blue',
+            borderWidth: 2,
+            pointRadius: 0,
+            fill: false,
+          }]
+        },
+        options: {
+          responsive: false,
+          scales: {
+            x: { type: 'linear', min: -10, max: 10, title: { display: true, text: 'x' } },
+            y: { min: -30, max: 30, title: { display: true, text: 'y' } }
+          },
+          plugins: { legend: { display: false } }
+        }
+      });
+    }
     // Plot y = 2x + 10 for x in [-10, 10]
     const ctx = document.getElementById('graph').getContext('2d');
     const xValues = [];
